| Bug #50362 | comp_err crashes during compilation on FreeBSD | ||
|---|---|---|---|
| Submitted: | 15 Jan 2010 12:06 | Modified: | 7 Mar 2010 20:24 |
| Reporter: | Vladislav Vaintroub | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: General | Severity: | S3 (Non-critical) |
| Version: | next-mr | OS: | FreeBSD |
| Assigned to: | Vladislav Vaintroub | CPU Architecture: | Any |
[15 Jan 2010 12:06]
Vladislav Vaintroub
[15 Jan 2010 12:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97059 2967 Vladislav Vaintroub 2010-01-15 Bug #50362 comp_err crashes during compilation on FreeBSD. The reason for the crash is using uinitialized mutex attribute (MY_MUTEX_FAST_INIT) in pthread_mutex_init. The fix is to initialize the attribute before the first use.
[20 Jan 2010 13:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97554 2967 Vladislav Vaintroub 2010-01-20 Bug #50362 comp_err crashes during compilation on FreeBSD. The reason for the crash is using uinitialized mutex attribute (MY_MUTEX_FAST_INIT) in pthread_mutex_init. The fix is to initialize the attribute before the first use.
[20 Jan 2010 13:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/97571 3836 Vladislav Vaintroub 2010-01-20 [merge] Null merge fix for Bug#50362 (bug does not occur in 6.0 codebase)
[13 Feb 2010 8:37]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100213083436-9pesg4h55w1mekxc) (version source revid:luis.soares@sun.com-20100211135109-t63avry9fqpgyh78) (merge vers: 6.0.14-alpha) (pib:16)
[13 Feb 2010 8:39]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100213083327-cee4ao3jpg33eggv) (version source revid:luis.soares@sun.com-20100211135018-1f9dbghg0itszigo) (pib:16)
[13 Feb 2010 17:56]
Paul DuBois
No 6.0.x changelog entry needed. (Problem does not occur in 6.0.) Setting report to Need Merge pending push of Celosia to release tree.
[22 Feb 2010 11:48]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100222114459-6r3tme81gwtm26wb) (version source revid:vvaintroub@mysql.com-20100128003813-0zce3dd530ssjtg0) (merge vers: 6.0.14-alpha) (pib:16)
[22 Feb 2010 11:52]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100222114041-eya4ns8e6qnvofqz) (version source revid:wlad@sun.com-20100116040402-52cj3m50bke2rdwf) (pib:16)
[22 Feb 2010 15:43]
Paul DuBois
Setting report to Need Merge pending push of Celosia to release tree.
[6 Mar 2010 10:51]
Bugs System
Pushed into 5.5.3-m3 (revid:alik@sun.com-20100306103849-hha31z2enhh7jwt3) (version source revid:vvaintroub@mysql.com-20100213160132-nx1vlocxuta76txh) (merge vers: 5.5.99-m3) (pib:16)
[7 Mar 2010 20:24]
Paul DuBois
Noted in 5.5.3 changelog. comp_err did not build on FreeBSD.
[12 Apr 2010 16:28]
Paul DuBois
Correction: No changelog entry needed.
