Bug#50362: Init MY_PTHREAD_MUTEX_FAST prior to first usage to avoid crash on FreeBSD